# Diploma-project

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic_test.ini  db.sqlite3  items_views.py  main.py  pyproject.toml  Инструкция для нас
alembic/versions/: 2024_07_05_1928-c51932d4bca7_create_accounts_table.py  2024_07_06_1651-2acd45375859_create_users_and_product_table.py
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: db_helper.py  product.py
src/: __init__.py
src/bots/: __init__.py  crud.py  dependencies.py  schemas.py  views.py
src/core/: settings.py
src/core/models/: __init__.py  bot.py  db_helper.py
src/products/: crud.py  dependencies.py  models.py  schemas.py  views.py
src/users/: __init__.py  crud.py  dependencies.py  models.py  schemas.py  tests.py  views.py
tests/: apply_migrations.py  base.py  conftest.py  test_products.py
tests/products/: test_products.py
tests/users/: error_handling.py  test_user_handling.py  test_users.py
users/: schemas.py
