[tool.poetry]

name = "fastapi_project"
version = "0.1.0"
description = "A FastAPI project with SQLAlchemy and async support"
authors = ["Yaroslav Kumpan <yroslavkumpan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]  # Убедитесь, что это добавлено

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
pydantic = { extras = ["email"], version = "^2.7.4" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.31" }
aiosqlite = "^0.20.0"
pydantic-settings = "^2.3.3"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
black = "^24.4.2"
alembic = "^1.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings -q"
asyncio_mode = "auto"

[tool.poetry.scripts]
start = "main:app"